# licensor

./: example.py  license_checker.py  license_server.py  pyproject.toml
